# KaggleCompetition

./: EWGM_POI.ipynb  LICENSE  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
data/: processed_data.csv  submission.csv  submission_improved.csv
notebooks/: 00_DataExploration.ipynb  00_Dataloading.ipynb  01_Outlier_removal_included.ipynb  02_Continuation_wOutliers.ipynb  03_First_Submission_XGBoost.ipynb  03_Modelling_Optuna_XGBoost.ipynb  04_Tuning_XGBoost_with_Optuna.ipynb  04_XGBoost_Modelling_Visualisations.ipynb  05_Fist_Second_XGBoost.ipynb  05_Modelling_XGBoost.ipynb  06_Loading_Graphing.ipynb  06_Second_Third_Submission_XGBoost copy 3.ipynb  07_EGWM_Worst_result.ipynb  07_Optuna_XGBoost.ipynb  08_Blank_Try.ipynb  08_prophet.ipynb  09_Less_Variables_XGBoost.ipynb  10_EWGM.ipynb  10_Less_Variables_XGBoost_improved.ipynb  11_EWGM.ipynb  11_EWGM_rebuild.ipynb  11_Lasso.ipynb  12_DAN_Submission_EWGM_POI.ipynb  12_XGBoost copy.ipynb  13_EWGM_Ensemble.ipynb  13_Lasso.ipynb  14_DAN_Submission_EWGM_POI.ipynb  14_EWGM_Kaggle_Ensemble.ipynb  15_new_try_EWGM_Ensemble.ipynb  16_Stacking_Ensemble.ipynb  17_inventory_ensemble.ipynb
notebooks/17_Ensemble_Improvements/: 17_inventory_ensemble.ipynb
output/: EWGM_ensemble_submission.csv  Fourth_submission.csv  Third_submission.csv  processed_data.csv  processed_data_improved.csv  processed_data_lasso.csv  submission.csv
output/04_XGBoost_Modelling_Visualisations/: processed_data.csv
output/07_XGBoost_Optuna/: submission.csv
output/11_EWGM/: submission.csv
src/: README.md  io.py
tests/: EWGM.md
(+32 files in other folders)
